Fix bug with word wrap/break statements on wrong element

--- a/app/assets/stylesheets/facts/_show.scss
+++ b/app/assets/stylesheets/facts/_show.scss
@@ -215,6 +215,10 @@
       min-height: 48px;
       text-overflow: ellipsis;
     }
+    a {
+      word-wrap: break-word;
+      word-break: break-all;
+    }
   }
   .evidence-url {
     margin: 0;
